syntax = "proto3";
option java_multiple_files = true;
package net.reappay.pg.payments.paymentsback.proto;

message PaymentRequest {
  string apprType= 1;
  string certiType= 2;
  string authty= 3;
  string interest=4;
  string passwd=5;
  string lastTidNum= 6;
  string currencyType= 7;
  string status= 8;
  string ipAddr=9;
  string tradeDate= 10;
  string tradeTime= 11;
  string issCode= 12;
  string aquCode= 13;
  string cavv= 14;
  string xid= 15;
  string eci= 16;
  string kbAppOtp= 17;
  string KVPNOINT= 18;
  string KVPQUOTA= 19;
  string KVPPGID= 20;
  string KVPCARDCODE= 21;
  string KVPSESSIONKEY= 22;
  string KVPENCDATA= 23;
  string authNo= 24;
  string message1= 25;
  string message2= 26;
  string cardNo= 27;
  string cardCode= 45;
  string expDate= 28;
  string installment= 29;
  string amount= 30;
  string merchantNo= 31;
  string authSendType= 32;
  string approvalSendType= 33;
  string point1= 34;
  string point2= 35;
  string point3= 36;
  string point4= 37;
  string vanTransactionNo= 38;
  string filler= 39;
  string authType= 40;
  string MPIPositionType= 41;
  string MPIReUseType= 42;
  string EncData=43;
  string tranSeq= 44;
  string resultCode= 53;
  string resultMsg= 46;
  string etcData1= 48;
  string etcData2= 49;
  string etcData3= 50;
  string etcData4= 51;
  string etcData5= 52;
  string tableYd=54;

}

message PaymentResponse {
  string apprType= 1;
  string certiType= 2;
  string authty= 3;
  string interest=4;
  string passwd=5;
  string lastTidNum= 6;
  string currencyType= 7;
  string status= 8;
  string ipAddr=9;
  string tradeDate= 10;
  string tradeTime= 11;
  string issCode= 12;
  string aquCode= 13;
  string cavv= 14;
  string xid= 15;
  string eci= 16;
  string kbAppOtp= 17;
  string KVPNOINT= 18;
  string KVPQUOTA= 19;
  string KVPPGID= 20;
  string KVPCARDCODE= 21;
  string KVPSESSIONKEY= 22;
  string KVPENCDATA= 23;
  string authNo= 24;
  string message1= 25;
  string message2= 26;
  string cardNo= 27;
  string cardCode= 45;
  string expDate= 28;
  string installment= 29;
  string amount= 30;
  string merchantNo= 31;
  string authSendType= 32;
  string approvalSendType= 33;
  string point1= 34;
  string point2= 35;
  string point3= 36;
  string point4= 37;
  string vanTransactionNo= 38;
  string filler= 39;
  string authType= 40;
  string MPIPositionType= 41;
  string MPIReUseType= 42;
  string EncData=43;
  string tranSeq= 44;
  string resultCode= 53;
  string resultMsg= 46;
  string etcData1= 48;
  string etcData2= 49;
  string etcData3= 50;
  string etcData4= 51;
  string etcData5= 52;
  string tableYd=54;

}

service PaymentService {
  rpc paymentCall (PaymentRequest) returns (PaymentResponse);
}